--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Hacker is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
+title: [purplehat's lair]
+description: [portfolio here]
